# langfuse_practice_v4

./: 01_hello_langfuse.py  04_prompt_management.py  05_prompt_trace.py  06_evaluation_scores.py  07_evaluation_datasets.py  08_evaluation_live.py  README.md  hello_langfuse.py  main.py  manual_tracing.py  personalized_tracing.py  prompt_management.py  pyproject.toml
