[project]
name = "langfuse-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.1.16",
    "langchain-openrouter>=0.2.1",
    "langfuse>=4.5.0",
    "python-dotenv>=1.2.2",
]
